<package>
 <name>dumbo_contact_point_estimation_demo</name>
  <version>0.1.0</version>
  <description>
    Contact point estimation estimation demo on Dumbo
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dumbo_contact_point_estimation_demo</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>robotiq_s_model_control_client</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>

</package>


